# ae-plugin-template-rs

./: AdobePlugin.just  Cargo.toml  Justfile  LICENSE  README.md  build.rs  cargo-generate.toml  rustfmt.toml
src/: lib.rs
